package servicechaser.core.entity;

option java_package = "com.porecode.rpc.protobuf";
option java_outer_classname = "EntityProtos";

message Category {
  optional int64 id = 1;
  optional string title = 2;
  repeated Category children = 3;
  optional Category parent = 4;
  repeated Parameter parameters = 5;
  repeated Service services = 6;
}

message Parameter {
  optional int64 id = 1;
  optional string title = 2;
  optional string description = 3;
  enum Kind {
    RADIO = 0;
    CHECK_BOX = 1;
    DATA_SPAN = 2;
  }
  repeated Category categories = 5;
  repeated ParameterValue parameter_values = 6;
}

message Service {
  optional int64 id = 1;
  optional string title = 2;
  optional Category category = 3;
  repeated Producer producers = 4;
  repeated ParameterValue parameter_values = 5;
}

message ParameterValue {
  optional int64 id = 1;
  optional string text_value = 2;
  optional int64 int_value = 3;
}

message Producer {
  optional int64 id = 1;
  optional string title = 2;
  repeated Service services = 3;
}
